--- a/templets/upload.html
+++ b/templets/upload.html
@@ -1,22 +1,137 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Import Excel to SQLite</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-</head>
-<body class="p-4 bg-light">
+  <meta charset="UTF-8">
+  <title>Audit-Manager Dashboard</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+    }
 
-<div class="container">
-    <h2 class="mb-4">Upload Excel File</h2>
+    .sidebar {
+      height: 100vh;
+      background-color: #1f2937;
+      color: white;
+      padding-top: 20px;
+      position: fixed;
+      width: 250px;
+      transition: all 0.3s;
+      z-index: 1050;
+    }
+
+    .sidebar a {
+      color: white;
+      text-decoration: none;
+      display: block;
+      padding: 12px 20px;
+      font-size: 16px;
+    }
+
+    .sidebar a:hover {
+      background-color: #374151;
+      border-radius: 5px;
+    }
+
+    .main-content {
+      margin-left: 250px;
+      padding: 20px;
+      transition: all 0.3s;
+    }
+
+    /* Hide sidebar and shift content for small screens */
+    @media (max-width: 768px) {
+      .sidebar {
+        left: -250px;
+      }
+
+      .sidebar.active {
+        left: 0;
+      }
+
+      .main-content {
+        margin-left: 0;
+      }
+
+      .overlay {
+        display: none;
+        position: fixed;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0,0,0,0.5);
+        top: 0;
+        left: 0;
+        z-index: 1040;
+      }
+
+      .overlay.active {
+        display: block;
+      }
+    }
+  </style>
+</head>
+<body>
+
+  <!-- Toggle Button (hamburger) -->
+  <nav class="navbar bg-dark d-md-none">
+    <div class="container-fluid">
+      <button class="btn btn-outline-light" id="menu-toggle">☰</button>
+      <span class="navbar-brand mb-0 h1 text-white">Audit-Manager</span>
+    </div>
+  </nav>
+
+  <!-- Sidebar -->
+  <div class="sidebar" id="sidebar">
+    <h4 class="text-start">Audit-Manager</h4>
+    <h5>Welcome {{request.user}}</h5>
+    <hr style="border-color: rgba(255, 255, 255, 0.2)">
+    <a href="/">🏠 Home</a>
+    <a href="/master" onclick="Master_File()">📁 Master-File</a>
+    <a href="/upload/">📦 Stock-File</a>
+    <a href="/scanner">📷 Scanning-File</a>
+  <a href="">🔄 Difference (Stock & Scan)</a>
+  <a href="">📉 Short-File</a>
+  <a href="">📈 Excess-File</a>
+  <a href="">🧾 SIExcess-File</a>
+  <a href="/logout">🔓 Logout</a>
+  </div>
+
+ <!-- Main Content -->
+  <div class="main-content">
+  <div class="container">
+    <h2 class="mb-4">Upload-Stock Excel File</h2>
     <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
         <div class="mb-3">
-            <label for="excel_file" class="form-label">Select Excel File</label>
+            <label for="excel_file" class="form-label">Select-Stock Excel File</label>
             <input class="form-control" type="file" id="excel_file" name="file" accept=".xls,.xlsx,.csv" required>
         </div>
         <button class="btn btn-primary" type="submit">Import</button>
     </form>
 </div>
+</div>
+  <script >
+   const sidebar = document.getElementById("sidebar");
+    const overlay = document.getElementById("overlay");
+    const toggle = document.getElementById("menu-toggle");
+
+    toggle.addEventListener("click", () => {
+      sidebar.classList.toggle("active");
+      overlay.classList.toggle("active");
+    });
+
+    overlay.addEventListener("click", () => {
+      sidebar.classList.remove("active");
+      overlay.classList.remove("active");
+    }); 
+  </script>
 
 </body>
 </html>
+
+
+ 
+</body>
+</html>
+
