--- a/templets/Data_Entry.html
+++ b/templets/Data_Entry.html
@@ -3,59 +3,221 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AUDIT-MANAGER</title>
+    <title>Audit-Manager Dashboard</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+        }
+
+        .sidebar {
+            height: 100vh;
+            background-color: #1f2937;
+            color: white;
+            padding-top: 20px;
+            position: fixed;
+            width: 250px;
+            transition: all 0.3s;
+            z-index: 1050;
+        }
+
+        .sidebar a {
+            color: white;
+            text-decoration: none;
+            display: block;
+            padding: 12px 20px;
+            font-size: 16px;
+        }
+
+        .sidebar a:hover {
+            background-color: #374151;
+            border-radius: 5px;
+        }
+
+        .main-content {
+            margin-left: 250px;
+            padding: 20px;
+            transition: all 0.3s;
+        }
+
+/* Ensure table scrolls on small screens */
+.table-responsive {
+    overflow-x: auto;
+}
+
+/* Sidebar adjustments */
+@media (max-width: 768px) {
+    .sidebar {
+        position: fixed;
+        top: 0;
+        left: -250px;
+        height: 100%;
+        transition: left 0.3s ease;
+    }
+    .sidebar.active {
+        left: 0;
+    }
+    .main-content {
+        margin-left: 0;
+    }
+}
+
+        /* Hide sidebar and shift content for small screens */
+        @media (max-width: 768px) {
+            .sidebar {
+                left: -250px;
+            }
+
+            .sidebar.active {
+                left: 0;
+            }
+
+            .main-content {
+                margin-left: 0;
+            }
+
+            .overlay {
+                display: none;
+                position: fixed;
+                width: 100%;
+                height: 100%;
+                background-color: rgba(0, 0, 0, 0.5);
+                top: 0;
+                left: 0;
+                z-index: 1040;
+            }
+
+            .overlay.active {
+                display: block;
+            }
+        }
+    </style>
 </head>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
-    crossorigin="anonymous"></script>
 
-<body>
-    <form action="/dataEnter" method="post">
-        {% csrf_token %}
+<body >
 
-        <label for="lno">Add Location no:</label>
-        <input type="text" name="lno" value="">
-        <button type="submit" class="btn btn-primary mb-3">Set-Location</button>
-    </form>
+    <!-- Toggle Button (hamburger) -->
+    <nav class="navbar bg-dark d-md-none">
+        <div class="container-fluid">
+            <button class="btn btn-outline-light" id="menu-toggle">☰</button>
+            <span class="navbar-brand mb-0 h1 text-white">Audit-Manager</span>
+        </div>
+    </nav>
 
-    <table class="table table-bordered table-hover" id="myTable">
-        <thead class="table-dark">
-            <tr>
-                <th>Location</th>
-                <th>Item Code</th>
+    <!-- Sidebar -->
+    <div class="sidebar" id="sidebar">
+        <h4 class="text-start">Audit-Manager</h4>
+        <h5>Welcome {{request.user}}</h5>
+        <hr style="border-color: rgba(255, 255, 255, 0.2)">
+        <a href="/">🏠 Home</a>
+        <a href="/master" onclick="Master_File()">📁 Master-File</a>
+        <a href="/upload/">📦 Stock-File</a>
+        <a href="/scanner">📷 Scanning-File</a>
+        <a href="/dataEnter">🔄 Difference (Stock & Scan)</a>
+        <a href="">📉 Short-File</a>
+        <a href="">📈 Excess-File</a>
+        <a href="">🧾 SIExcess-File</a>
+        <a href="/logout">🔓 Logout</a>
+    </div>
 
-            </tr>
-        </thead>
-        <tbody>
-            <form action="/dataEnter" method="post">
-                {% csrf_token %}
+    <!-- Mobile overlay -->
+    <div class="overlay" id="overlay"></div>
+
+    <!-- Main content -->
+    <div class="main-content p-4">
+        <div class="container"></div>
+      
+
+        <form action="/dataEnter" method="post">
+            {% csrf_token %}
+
+            <label for="lno">Add Location no:</label>
+            <input type="text" name="lno" id="lno" value="">
+            <button type="submit" class="btn btn-primary mb-3" onclick="ls()">Set-Location</button>
+        </form>
+<div class="table-responsive"></div>
+  {% comment %} Scanner-File {% endcomment %}
+
+        <table class="table table-bordered table-hover align-middle" id="myTable">
+            <thead class="table-dark">
                 <tr>
+                    <th>Location</th>
+                    <th>Item Code</th>
 
-                    <td>
-                        {{selected_product.loc_vise}} 
-                       <label for="loca">Location :</label>
-                        <input type="text" name="location" id="loca" value="{{ selected_product.id }} " readonly><br>
-                         <!-- <label>Location:</label>
-                       <select name="location" required>
-                            <option value="Location 1">Location 1</option>
-                            <option value="Location 2">Location 2</option>
-                            <option value="Location 3">Location 3</option>
-                        </select> -->
-                    </td>
-                    <td>
-                        <label for="addl">addl :</label>
-                        <input type="text" name="addl" id="addl" placeholder="Add a Item-List" value="" autofocus>
-                        <button style="display: none;">Submit</button>
-
-                    </td>
                 </tr>
-            </form>
-        </tbody>
-    </table>
-    <br>
+            </thead>
+            <tbody>
+                <form action="/dataEnter" method="post">
+                    {% csrf_token %}
+                    <tr>
+
+                        <td>
+                            <!-- {{selected_product.loc_vise}}  -->
+                            <label for="location">Location:</label>
+                            <input type="text" name="location" id="myInput" value=" " readonly><br>
+                            <!-- <p id="output" name="location"></p> -->
+                        </td>
+                        <td>
+                            <label for="addl">addl :</label>
+                            <input type="text" name="addl" id="addl" placeholder="Add a Item-List" value="" autofocus>
+                            <button style="display: none;">Submit</button>
+
+                        </td>
+                    </tr>
+                            <!-- {% if messages %}
+    {% for message in messages %}
+        <div class="alert alert-{{ message.tags }} mt-2">
+            {{ message }}
+        </div>
+    {% endfor %}
+{% endif %} -->
+                </form>
+            </tbody>
+        </table>
+      
+    </div>
+        <br>
+
+  </div>
+    </div>
+
+    <script>
+        // let loca = document.getElementById("loca").value;
+        let addl = document.getElementById("addl").value;
+
+        // console.log("Location Set :"+ls)
+
+        // console.log("Location " + loca)
+        function ls() {
+            let lno = document.getElementById("lno").value;
+            localStorage.setItem("Location", lno);
+            displayLoction();
+        }
+        function displayLoction() {
+            let storedName = localStorage.getItem("Location");
+            document.getElementById("myInput").value = localStorage.getItem("Location");
+            document.getElementById("output").innerText = storedName;
+
+        }
+        window.onload = displayLoction;
+
+        const sidebar = document.getElementById("sidebar");
+        const overlay = document.getElementById("overlay");
+        const toggle = document.getElementById("menu-toggle");
+
+        toggle.addEventListener("click", () => {
+            sidebar.classList.toggle("active");
+            overlay.classList.toggle("active");
+        });
+
+        overlay.addEventListener("click", () => {
+            sidebar.classList.remove("active");
+            overlay.classList.remove("active");
+        }); 
+    </script>
+
 </body>
 
 </html>
