--- a/templets/view.html
+++ b/templets/view.html
@@ -126,7 +126,7 @@
         <a href="#services" class="btn hide-sm">Services</a>
         <a href="#featured" class="btn hide-sm">Featured</a>
         <a href="#gallery" class="btn hide-sm">Gallery</a>
-        <a href="/" class="btn primary">Shop Now</a>
+        <a href="/dataEnter" class="btn primary">Start Audit</a>
       </nav>
     </div>
   </header>
