--- a/templets/login.html
+++ b/templets/login.html
@@ -7,7 +7,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     body {
-      background-color: #f8f9fa;
+      background-color:#0e0f12;
     }
 
     .form-signin {
@@ -23,24 +23,32 @@
 </head>
 
 <body>
-
-  <div class="form-signin">
-    <h2 class="text-center mb-4">Sign In</h2>
+<div class="container d-flex align-items-center justify-content-center" style="min-height: 100vh;">
+  <div class="col-md-6 col-lg-4">
+    <div class="card shadow p-4 rounded-4">
+      <h2 class="text-center mb-4">Sign In</h2>
       <form method="post" action="/login">
-    {% csrf_token %}
-   <div class="mb-3">
-        <label for="username" class="form-label">Email or Username :</label>
-        <input type="text" class="form-control" id="username" name="username" required>
-      </div>
+        {% csrf_token %}
+        
+        <!-- Username / Email -->
+        <div class="mb-3">
+          <label for="username" class="form-label">Email or Username</label>
+          <input type="text" class="form-control" id="username" name="username" placeholder="Enter your email or username" required>
+        </div>
 
-<div class="mb-3">
-        <label for="password" class="form-label">Password :</label>
-        <input type="password" class="form-control" id="password" name="password" required>
-      </div> 
- 
-  <button type="submit" class="btn btn-primary">Submit</button>
-</form>
+        <!-- Password -->
+        <div class="mb-3">
+          <label for="password" class="form-label">Password</label>
+          <input type="password" class="form-control" id="password" name="password" placeholder="Enter your password" required>
+        </div>
+
+        <!-- Submit Button -->
+        <button type="submit" class="btn btn-primary w-100">Sign In</button>
+      </form>
+    </div>
   </div>
+</div>
+
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
