--- a/templets/upload.html
+++ b/templets/upload.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Audit-Manager Dashboard</title>
@@ -59,7 +60,7 @@
         position: fixed;
         width: 100%;
         height: 100%;
-        background-color: rgba(0,0,0,0.5);
+        background-color: rgba(0, 0, 0, 0.5);
         top: 0;
         left: 0;
         z-index: 1040;
@@ -71,6 +72,7 @@
     }
   </style>
 </head>
+
 <body>
 
   <!-- Toggle Button (hamburger) -->
@@ -90,48 +92,86 @@
     <a href="/master" onclick="Master_File()">📁 Master-File</a>
     <a href="/upload/">📦 Stock-File</a>
     <a href="/scanner">📷 Scanning-File</a>
-  <a href="">🔄 Difference (Stock & Scan)</a>
-  <a href="">📉 Short-File</a>
-  <a href="">📈 Excess-File</a>
-  <a href="">🧾 SIExcess-File</a>
-  <a href="/logout">🔓 Logout</a>
+    <a href="/ss">🔄 Difference (Stock & Scan)</a>
+    <a href="/short">📉 Short-File</a>
+    <a href="/excess">📈 Excess-File</a>
+    <a href="">🧾 SIExcess-File</a>
+    <a href="/logout">🔓 Logout</a>
   </div>
 
- <!-- Main Content -->
+  <!-- Main Content -->
   <div class="main-content">
-  <div class="container">
-    <h2 class="mb-4">Upload-Stock Excel File</h2>
-    <form method="post" enctype="multipart/form-data">
+    <div class="container">
+      <h2 class="mb-4">Upload-Stock Excel File</h2>
+      <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
         <div class="mb-3">
-            <label for="excel_file" class="form-label">Select-Stock Excel File</label>
-            <input class="form-control" type="file" id="excel_file" name="file" accept=".xls,.xlsx,.csv" required>
+          <label for="excel_file" class="form-label">Select-Stock Excel File</label>
+          <input class="form-control" type="file" id="excel_file" name="file" accept=".xls,.xlsx,.csv" required>
         </div>
         <button class="btn btn-primary" type="submit">Import</button>
-    </form>
-</div>
-</div>
-  <script >
-   const sidebar = document.getElementById("sidebar");
-    const overlay = document.getElementById("overlay");
-    const toggle = document.getElementById("menu-toggle");
+      </form>
+    </div>
+    <br>
+      <h2 class="mb-4 text-center">📊 Stock Records</h2>
+      <!-- Table Section -->
+      <div class="container-fluid py-3">
+        <div class="table-responsive" style="max-height: 500px; overflow-y: auto;">
+          <table class="table table-bordered table-striped table-hover align-middle">
+            <thead class="table-dark text-center sticky-top">
+              <tr>
+                <th>Addl</th>
+                <th>Barcode</th>
+                <th>Article No</th>
+                <th>Size</th>
+                <th>Section</th>
+                <th>MRP</th>
+               
+              </tr>
+            </thead>
+            <tbody>
+              {% for row in result %}
+              <tr>
+                <td>{{ row.EANCODE }}</td>
+                <td>{{ row.BARCODE }}</td>
+                <td>{{ row.ARTICLENO }}</td>
+                <td>{{ row.SIZE }}</td>
+                <td>{{ row.SECTION }}</td>
+                <td>{{ row.MRP }}</td>
+               
+              </tr>
+              {% endfor %}
+            </tbody>
+          </table>
+        </div>
+      </div><br>
+      <div class="container mb-3">
+        <button class="btn btn-success" onclick="downloadTable()">📥 Download Table</button>
 
-    toggle.addEventListener("click", () => {
-      sidebar.classList.toggle("active");
-      overlay.classList.toggle("active");
-    });
+      </div>
+    </div>
+    <script>
+      const sidebar = document.getElementById("sidebar");
+      const overlay = document.getElementById("overlay");
+      const toggle = document.getElementById("menu-toggle");
 
-    overlay.addEventListener("click", () => {
-      sidebar.classList.remove("active");
-      overlay.classList.remove("active");
-    }); 
-  </script>
+      toggle.addEventListener("click", () => {
+        sidebar.classList.toggle("active");
+        overlay.classList.toggle("active");
+      });
+
+      overlay.addEventListener("click", () => {
+        sidebar.classList.remove("active");
+        overlay.classList.remove("active");
+      }); 
+    </script>
 
 </body>
+
 </html>
 
 
- 
-</body>
-</html>
 
+</body>
+
+</html>
