--- a/templets/excess.html
+++ b/templets/excess.html
@@ -118,7 +118,7 @@
         <tr>
           <th>Addl</th>
           <th>Barcode</th>
-          <th>Article No</th>
+          <th>Item Name</th>
           <th>Size</th>
           <th>Section</th>
           <th>MRP</th>
