--- a/templets/shortFile.html
+++ b/templets/shortFile.html
@@ -118,7 +118,7 @@
             <tr>
               <th>ADDL</th>
               <th>Barcode</th>
-              <th>Article No</th>
+              <th>Item Name</th>
               <th>Size</th>
               <th>Section</th>
               <th>MRP</th>
