--- a/templets/Data_Entry.html
+++ b/templets/Data_Entry.html
@@ -255,11 +255,11 @@
 
                         <!-- Update Barcode Form -->
                         <div class="flex-fill" style="min-width: 300px; max-width: 48%;">
+                            <h5 class="card-title">Update Barcode</h5>
                             <div class="card shadow p-3 h-100">
-                                <h5 class="card-title">Update Barcode</h5>
                                 <form action="/dataEnter" method="post">
                                     {% csrf_token %}
-                                   
+                                    <div class="d-flex flex-wrap gap-3" style="display: flex; flex-direction: row;">
                                     <div class="mb-3">
                                         <label for="cb" class="form-label">Enter a Addl:</label>
                                         <input type="text" name="cb" id="bc" class="form-control"
@@ -271,61 +271,64 @@
                                             placeholder="Update Addl ...">
                                     </div>
                                     <button type="submit" class="btn btn-success w-100">Update</button>
+                                    </div>
                                 </form>
                             </div>
                         </div>
 
                     </div>
+                </div><br>
+
+                <div class="container-fluid mt-4">
+
+                    <!-- Page Title -->
+                    <h2 class="mb-4 text-center">📊 Scanning Records</h2>
+
+                    <!-- Table Section -->
+                    <div class="card shadow-lg border-0">
+                        <div class="card-body">
+
+                            <!-- Table Wrapper (scrollable) -->
+                            <div class="table-responsive" style="max-height: 500px; overflow-y: auto;">
+                                <table class="table table-bordered table-striped table-hover align-middle text-center"
+                                    id="table1">
+                                    <thead class="table-dark sticky-top">
+                                        <tr>
+                                            <th scope="col">#</th>
+                                            <th scope="col">Date</th>
+                                            <th scope="col">Location No</th>
+                                            <th scope="col">ADDL</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        {% for row in display %}
+                                        <tr>
+                                            <td>{{ row.id }}</td>
+                                            <td>{{ row.my_date }}</td>
+                                            <td>{{ row.loc_rec }}</td>
+                                            <td>{{ row.add_item_list }}</td>
+                                        </tr>
+                                        {% empty %}
+                                        <tr>
+                                            <td colspan="4" class="text-center text-muted">No records found</td>
+                                        </tr>
+                                        {% endfor %}
+                                    </tbody>
+                                </table>
+                            </div>
+
+                        </div>
+
+
+
+
+                    </div>
                 </div>
-<div class="container-fluid mt-4">
 
-    <!-- Page Title -->
-    <h2 class="mb-4 text-center">📊 Scanning Records</h2>
+                <br>
 
-    <!-- Table Section -->
-    <div class="card shadow-lg border-0">
-        <div class="card-body">
-
-            <!-- Table Wrapper (scrollable) -->
-            <div class="table-responsive" style="max-height: 500px; overflow-y: auto;">
-                <table class="table table-bordered table-striped table-hover align-middle text-center" id="table1">
-                    <thead class="table-dark sticky-top">
-                        <tr>
-                            <th scope="col">#</th>
-                            <th scope="col">Date</th>
-                            <th scope="col">Location No</th>
-                            <th scope="col">ADDL</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {% for row in display %}
-                        <tr>
-                            <td>{{ row.id }}</td>
-                            <td>{{ row.my_date }}</td>
-                            <td>{{ row.loc_rec }}</td>
-                            <td>{{ row.add_item_list }}</td>
-                        </tr>
-                        {% empty %}
-                        <tr>
-                            <td colspan="4" class="text-center text-muted">No records found</td>
-                        </tr>
-                        {% endfor %}
-                    </tbody>
-                </table>
             </div>
-
         </div>
-
-
-    
-
-</div>
-    </div>
-
-    <br>
-
-    </div>
-    </div>
     </div>
 
     <script>
