--- a/templets/Data_Entry.html
+++ b/templets/Data_Entry.html
@@ -134,42 +134,99 @@
             <div class="card shadow">
                 <div class="card-header bg-dark text-white">
                     <h5 class="mb-0">Location & Item Entry</h5>
-                </div>
-                <div class="container mt-4">
-                    <div class="row">
+                </div><br>
+<!-- Bootstrap 5 Nav Tabs -->
+<ul class="nav nav-tabs mb-3" id="barcodeTab" role="tablist">
+  <li class="nav-item" role="presentation">
+    <button class="nav-link active" id="setlocation-tab" data-bs-toggle="tab" data-bs-target="#setlocation-pane" type="button" role="tab" aria-controls="setlocation-pane" aria-selected="true">
+      Set Location
+    </button>
+  </li>
+  <li class="nav-item" role="presentation">
+    <button class="nav-link" id="countdata-tab" data-bs-toggle="tab" data-bs-target="#countdata-pane" type="button" role="tab" aria-controls="countdata-pane" aria-selected="false">
+      Count Data
+    </button>
+  </li>
+</ul>
+
+<!-- Tab Content -->
+<div class="tab-content" id="barcodeTabContent">
+
+  <!-- 🔧 Set Location Tab Pane -->
+  <div class="tab-pane fade show active" id="setlocation-pane" role="tabpanel" aria-labelledby="setlocation-tab">
+    <div class="row">
+      <div class="col-md-6 mb-4">
+        <div class="card shadow p-3">
+          <h5 class="card-title">Add Location</h5>
+          <form action="/dataEnter" method="post">
+            {% csrf_token %}
+            <div class="mb-3">
+              <label for="lno" class="form-label">Add Location No:</label>
+              <input type="text" name="lno" id="lno" class="form-control" placeholder="Enter Location">
+            </div>
+            <button type="submit" class="btn btn-primary w-100" onclick="ls()">Set Location</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- 🔢 Count Data Tab Pane -->
+  <div class="tab-pane fade  " id="countdata-pane" role="tabpanel" aria-labelledby="countdata-tab">
+    <div class="row">
+      <div class="col-md-6 mb-4">
+        <div class="card shadow p-3">
+          <h5 class="card-title">Count Data</h5>
+          <form action="/dataEnter" method="post">
+            {% csrf_token %}
+            <div class="mb-3">
+              <label for="lc" class="form-label">Count Data:</label>
+              <input type="text" name="lc" id="lc" class="form-control" placeholder="Enter Count">
+            </div>
+            <button type="submit" class="btn btn-success w-100">Count</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+
+</div>
+
+                <!--<div class="container mt-4" id="Addloc">-->
+                <!--    <div class="row">-->
                         <!-- Add Location Form -->
-                        <div class="col-md-6 mb-4">
-                            <div class="card shadow p-3">
-                                <h5 class="card-title">Add Location</h5>
-                                <form action="/dataEnter" method="post">
-                                    {% csrf_token %}
-                                    <div class="mb-3">
-                                        <label for="lno" class="form-label">Add Location No:</label>
-                                        <input type="text" name="lno" id="lno" class="form-control"
-                                            placeholder="Enter Location">
-                                    </div>
-                                    <button type="submit" class="btn btn-primary w-100" onclick="ls()">Set
-                                        Location</button>
-                                </form>
-                            </div>
-                        </div>
+                <!--        <div class="col-md-6 mb-4">-->
+                <!--            <div class="card shadow p-3">-->
+                <!--                <h5 class="card-title">Add Location</h5>-->
+                <!--                <form action="/dataEnter" method="post">-->
+                <!--                    {% csrf_token %}-->
+                <!--                    <div class="mb-3">-->
+                <!--                        <label for="lno" class="form-label">Add Location No:</label>-->
+                <!--                        <input type="text" name="lno" id="lno" class="form-control"-->
+                <!--                            placeholder="Enter Location">-->
+                <!--                    </div>-->
+                <!--                    <button type="submit" class="btn btn-primary w-100" onclick="ls()">Set-->
+                <!--                        Location</button>-->
+                <!--                </form>-->
+                <!--            </div>-->
+                <!--        </div>-->
 
                         <!-- Count Data Form -->
-                        <div class="col-md-6 mb-4">
-                            <div class="card shadow p-3">
-                                <h5 class="card-title">Count Data</h5>
-                                <form action="/dataEnter" method="post">
-                                    {% csrf_token %}
-                                    <div class="mb-3">
-                                        <label for="lc" class="form-label">Count Data:</label>
-                                        <input type="text" name="lc" id="lc" class="form-control"
-                                            placeholder="Enter Count">
-                                    </div>
-                                    <button type="submit" class="btn btn-success w-100">Count</button>
-                                </form>
-                            </div>
-                        </div>
-                    </div>
+                <!--        <div class="col-md-6 mb-4" id="CountData">-->
+                <!--            <div class="card shadow p-3">-->
+                <!--                <h5 class="card-title">Count Data</h5>-->
+                <!--                <form action="/dataEnter" method="post">-->
+                <!--                    {% csrf_token %}-->
+                <!--                    <div class="mb-3">-->
+                <!--                        <label for="lc" class="form-label">Count Data:</label>-->
+                <!--                        <input type="text" name="lc" id="lc" class="form-control"-->
+                <!--                            placeholder="Enter Count">-->
+                <!--                    </div>-->
+                <!--                    <button type="submit" class="btn btn-success w-100">Count</button>-->
+                <!--                </form>-->
+                <!--            </div>-->
+                <!--        </div>-->
+                <!--    </div>-->
                     <!-- Display Result -->
                     <div class="row">
                         <div class="col-12">
@@ -178,11 +235,11 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div><br>
 
                 <div class="card-body">
                     <div class="table-responsive" style="max-height: 400px; overflow-y: auto;">
-                        <form action="/dataEnter" method="post">
+                        <form action="/dataEnter" method="post" id="scanForm">
                             {% csrf_token %}
                             <table class="table table-striped table-bordered align-middle">
                                 <thead class="table-dark sticky-top">
@@ -220,13 +277,84 @@
                     </div>
 
                     <!-- Django Messages -->
-                    {% if messages %}
-                    {% for message in messages %}
-                    <div class="alert alert-danger mt-3">
-                        {{ message }}
+                    <!--{% if messages %}-->
+                    <!--{% for message in messages %}-->
+                    <!--<div class="alert alert-danger mt-3">-->
+                    <!--    {{ message }}-->
+                    <!--</div>-->
+                    <!--{% endfor %}-->
+                    <!--{% endif %}-->
+                     {% if messages %}
+                    <div class="container mt-2">
+                        {% for message in messages %}
+                        <div class="alert
+               {% if message.tags == 'success' %} alert-success
+               {% elif message.tags == 'error' %} alert-danger
+               {% else %} alert-info {% endif %}
+               alert-dismissible fade show" role="alert">
+
+                            {{ message }}
+                            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                        </div>
+                        {% endfor %}
                     </div>
-                    {% endfor %}
                     {% endif %}
+
+                    <!-- Action Toggle Tabs -->
+<ul class="nav nav-tabs mb-3" id="barcodeTab" role="tablist">
+  <li class="nav-item" role="presentation">
+    <button class="nav-link active" id="update-tab" data-bs-toggle="tab" data-bs-target="#update-form" type="button" role="tab">Update</button>
+  </li>
+  <li class="nav-item" role="presentation">
+    <button class="nav-link" id="delete-tab" data-bs-toggle="tab" data-bs-target="#delete-form" type="button" role="tab">Delete</button>
+  </li>
+</ul>
+
+<!-- Tab Content -->
+<div class="tab-content" id="barcodeTabContent">
+  <!-- Update Form -->
+  <div class="tab-pane fade show active" id="update-form" role="tabpanel">
+    <div class="card shadow p-3">
+      <h5 class="card-title">Update Barcode</h5>
+      <form action="/dataEnter" method="post">
+        {% csrf_token %}
+        <!-- <div class="mb-3">
+          <label for="locationNoUpdate" class="form-label">Enter a Location No:</label>
+          <input type="text" name="locationNo" id="locationNoUpdate" class="form-control" required>
+        </div> -->
+        <div class="mb-3">
+          <label for="addlUpdate" class="form-label">Enter Addl:</label>
+          <input type="text" name="addl" id="addlUpdate" class="form-control" required>
+        </div>
+        <div class="mb-3">
+          <label for="updateAddl" class="form-label">Enter Update Addl:</label>
+          <input type="text" name="updateAddl" id="updateAddl" class="form-control">
+        </div>
+        <button type="submit" class="btn btn-success w-100">Update</button>
+      </form>
+    </div>
+  </div>
+
+  <!-- Delete Form -->
+  <div class="tab-pane fade" id="delete-form" role="tabpanel">
+    <div class="card shadow p-3">
+      <h5 class="card-title">Delete Barcode</h5>
+      <form method="post">
+        {% csrf_token %}
+        <div class="mb-3">
+          <label for="locationNoDelete" class="form-label">Enter a Location No:</label>
+          <input type="text" name="locationNo" id="locationNoDelete" class="form-control" required>
+        </div>
+        <div class="mb-3">
+          <label for="addlDelete" class="form-label">Enter Addl:</label>
+          <input type="text" name="addl" id="addlDelete" class="form-control" required>
+        </div>
+        <button type="submit" class="btn btn-danger w-100">Delete</button>
+      </form>
+    </div>
+  </div>
+</div>
+<br>
 
                 </div>
                 <!-- Filter + Update Barcode in Same Row with Flex -->
@@ -253,31 +381,7 @@
                             </div>
                         </div> -->
 
-                        <!-- Update Barcode Form -->
-                        <div class="flex-fill" style="min-width: 300px; max-width: 48%;">
-                            <h5 class="card-title">Update Barcode</h5>
-                            <div class="card shadow p-3 h-100">
-                                <form action="/dataEnter" method="post">
-                                    {% csrf_token %}
-                                    <div class="d-flex flex-wrap gap-3" style="display: flex; flex-direction: row;">
-                                    <div class="mb-3">
-                                        <label for="cb" class="form-label">Enter a Addl:</label>
-                                        <input type="text" name="cb" id="bc" class="form-control"
-                                            placeholder="Addl ...">
-                                    </div>
-                                    <div class="mb-3">
-                                        <label for="ub" class="form-label">Enter Update Addl:</label>
-                                        <input type="text" name="ub" id="ub" class="form-control"
-                                            placeholder="Update Addl ...">
-                                    </div>
-                                    <button type="submit" class="btn btn-success w-100">Update</button>
-                                    </div>
-                                </form>
-                            </div>
-                        </div>
-
-                    </div>
-                </div><br>
+                     <br>
 
                 <div class="container-fluid mt-4">
 
@@ -285,39 +389,72 @@
                     <h2 class="mb-4 text-center">📊 Scanning Records</h2>
 
                     <!-- Table Section -->
-                    <div class="card shadow-lg border-0">
-                        <div class="card-body">
+                   <div class="card shadow-lg border-0">
+    <div class="card-body">
 
-                            <!-- Table Wrapper (scrollable) -->
-                            <div class="table-responsive" style="max-height: 500px; overflow-y: auto;">
-                                <table class="table table-bordered table-striped table-hover align-middle text-center"
-                                    id="table1">
-                                    <thead class="table-dark sticky-top">
-                                        <tr>
-                                            <th scope="col">#</th>
-                                            <th scope="col">Date</th>
-                                            <th scope="col">Location No</th>
-                                            <th scope="col">ADDL</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        {% for row in display %}
-                                        <tr>
-                                            <td>{{ row.id }}</td>
-                                            <td>{{ row.my_date }}</td>
-                                            <td>{{ row.loc_rec }}</td>
-                                            <td>{{ row.add_item_list }}</td>
-                                        </tr>
-                                        {% empty %}
-                                        <tr>
-                                            <td colspan="4" class="text-center text-muted">No records found</td>
-                                        </tr>
-                                        {% endfor %}
-                                    </tbody>
-                                </table>
-                            </div>
+        <!-- Table Wrapper (scrollable) -->
+        <div class="table-responsive" style="max-height: 500px; overflow-y: auto;">
+            <form method="post" action="/dataEnter">
+                {% csrf_token %}
+                <table class="table table-bordered table-striped table-hover align-middle text-center" id="table1">
+                    <thead class="table-dark sticky-top">
+                        <tr>
+                            <th scope="col">
+                                <input type="checkbox" id="selectAll"> <!-- Master Checkbox -->
+                            </th>
+                            <th scope="col">Location</th>
+                            <th scope="col">ADDL</th>
+                            <th scope="col">ITEMCODE</th>
+                            <th scope="col">ITEMNAME</th>
+                            <th scope="col">SIZE</th>
+                            <th scope="col">MRP</th>
+                            <th scope="col">BRAND</th>
+                            <th scope="col">SECTION</th>
+                            <th scope="col">SEASON</th>
+                            <th scope="col">COLOURS</th>
+                            <th scope="col">Delete-Record</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for row in result %}
+                        <tr>
+                            <td>
+                                <input type="checkbox" name="selected_items" value="{{ row.add_item_list }}">
+                            </td>
+                            <td>{{ row.loc_rec }}</td>
+                            <td>{{ row.add_item_list }}</td>
+                            <td>{{ row.ITEMCODE }}</td>
+                            <td>{{ row.ITEMNAME }}</td>
+                            <td>{{ row.SIZE }}</td>
+                            <td>{{ row.MRP }}</td>
+                            <td>{{ row.BRANDNAME }}</td>
+                            <td>{{ row.SECTION }}</td>
+                            <td>{{ row.SEASON }}</td>
+                            <td>{{ row.COLOURS }}</td>
+                            <td><button type="submit" class="btn btn-primary btn-danger mt-3">Delete</button></td>
+                        </tr>
+                        {% empty %}
+                        <tr>
+                            <td colspan="11" class="text-center text-muted">No records found</td>
+                        </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
 
-                        </div>
+                <!-- Action Button -->
+                <!-- <button type="submit" class="btn btn-primary mt-3">Submit Selected</button> -->
+            </form>
+        </div>
+    </div>
+</div>
+
+<!-- ✅ Script for Select All -->
+<script>
+    document.getElementById("selectAll").addEventListener("click", function () {
+        let checkboxes = document.querySelectorAll('input[name="selected_items"]');
+        checkboxes.forEach(cb => cb.checked = this.checked);
+    });
+</script>
 
 
 
@@ -330,6 +467,7 @@
             </div>
         </div>
     </div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
     <script>
         // let loca = document.getElementById("loca").value;
@@ -382,7 +520,18 @@
             link.click();
         }
 
+  // Auto-submit when scanner sends "Enter"
+            inputField.addEventListener("keypress", function (event) {
+                if (event.key === "Enter") {
+                    event.preventDefault(); // stop default form behavior
+                    form.submit();          // auto-submit
+                }
+            });
 
+            // (Optional) Auto-submit after input is filled (scanner types fast)
+            inputField.addEventListener("change", function () {
+              form.submit();
+            });
 
     </script>
 
